# adk-python

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  autoformat.sh  llms-full.txt  llms.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: analyze-releases-for-adk-docs-updates.yml  discussion_answering.yml  pr-triage.yml  python-unit-tests.yml  sync.yml
contributing/samples/a2a_auth/: README.md  agent.py
contributing/samples/a2a_basic/: agent.py
contributing/samples/a2a_human_in_loop/: README.md  agent.py
contributing/samples/a2a_root/: agent.py
contributing/samples/adk_agent_builder_assistant/: __init__.py  agent.py  agent_builder_assistant.py  instruction_embedded.template  instruction_query.template
contributing/samples/adk_answering_agent/: README.md  agent.py  main.py  settings.py  tools.py  upload_docs_to_vertex_ai_search.py  utils.py
contributing/samples/adk_documentation/: tools.py  utils.py
contributing/samples/adk_pr_agent/: main.py
contributing/samples/adk_pr_triaging_agent/: agent.py  settings.py  utils.py
contributing/samples/adk_triaging_agent/: agent.py
contributing/samples/authn-adk-all-in-one/: README.md  requirements.txt
contributing/samples/bigquery/: README.md  agent.py
contributing/samples/bigtable/: README.md  agent.py
contributing/samples/cache_analysis/: README.md  __init__.py  agent.py  run_cache_experiments.py  utils.py
contributing/samples/code_execution/: gke_sandbox_agent.py
contributing/samples/core_callback/: root_agent.yaml
contributing/samples/core_callback_config/: root_agent.yaml
contributing/samples/core_custom_agent/: my_agents.py
contributing/samples/core_custom_agent_config/: my_agents.py  root_agent.yaml
contributing/samples/generate_image/: agent.py
contributing/samples/gke_agent_sandbox/: deployment_rbac.yaml
contributing/samples/google_search_agent/: agent.py
contributing/samples/hello_world/: agent.py
contributing/samples/hello_world_app/: agent.py  main.py
contributing/samples/hello_world_ma/: agent.py
contributing/samples/history_management/: agent.py
contributing/samples/human_in_loop/: agent.py
contributing/samples/human_tool_confirmation/: agent.py
contributing/samples/langchain_structured_tool_agent/: agent.py
contributing/samples/live_agent_api_server_example/: live_agent_example.py  readme.md
contributing/samples/live_bidi_streaming_multi_agent/: agent.py
contributing/samples/live_bidi_streaming_single_agent/: agent.py
contributing/samples/live_tool_callbacks_agent/: agent.py
contributing/samples/logprobs/: README.md  agent.py
contributing/samples/ma_basic/: code_tutor_agent.yaml  math_tutor_agent.yaml
contributing/samples/multi_agent_basic_config/: README.md  root_agent.yaml
contributing/samples/multi_agent_llm_config/: README.md  prime_agent.yaml  roll_agent.yaml  root_agent.yaml
contributing/samples/oauth_calendar_agent/: agent.py
contributing/samples/output_schema_with_tools/: agent.py
contributing/samples/spanner/: README.md  agent.py
contributing/samples/spanner_rag_agent/: README.md  agent.py
contributing/samples/static_instruction/: README.md  __init__.py  agent.py  main.py
contributing/samples/static_non_text_content/: README.md  __init__.py  agent.py  main.py
contributing/samples/sub_agents/: life_agent.py
contributing/samples/sub_agents_config/: root_agent.yaml
contributing/samples/telemetry/: main.py
contributing/samples/tool_functions/: root_agent.yaml  tools.py
contributing/samples/tool_functions_config/: root_agent.yaml
contributing/samples/tool_human_in_the_loop/: tools.py
contributing/samples/tool_human_in_the_loop_config/: README.md  root_agent.yaml
contributing/samples/tool_mcp_stdio_notion_config/: README.md  root_agent.yaml
contributing/samples/workflow_agent_seq/: agent.py
src/google/adk/: runners.py  telemetry.py  version.py
tests/unittests/: test_runners.py  test_telemetry.py  testing_utils.py
tests/unittests/agents/: test_agent_clone.py  test_agent_config.py  test_base_agent.py  test_callback_context.py  test_context_cache_config.py  test_gemini_context_cache_manager.py  test_invocation_context.py  test_langgraph_agent.py  test_llm_agent_include_contents.py  test_loop_agent.py  test_parallel_agent.py  test_readonly_context.py  test_remote_a2a_agent.py  test_run_config.py  test_sequential_agent.py  test_static_instructions.py
tests/unittests/apps/: test_apps.py
tests/unittests/artifacts/: test_artifact_service.py
tests/unittests/auth/: test_auth_handler.py  test_auth_preprocessor.py  test_credential_manager.py  test_oauth2_discovery.py
tests/unittests/cli/: test_cli_eval.py  test_cli_tools_click_option_mismatch.py  test_fast_api.py
tests/unittests/code_executors/: test_gke_code_executor.py
tests/unittests/evaluation/: test_app_details.py  test_eval_case.py  test_evaluation_generator.py  test_final_response_match_v2.py  test_gcs_eval_sets_manager.py  test_in_memory_eval_sets_manager.py  test_llm_as_judge.py  test_llm_as_judge_utils.py  test_local_eval_service.py  test_local_eval_sets_manager.py  test_request_intercepter_plugin.py  test_response_evaluator.py  test_rubric_based_evaluator.py  test_rubric_based_final_response_quality_v1.py  test_rubric_based_tool_use_quality_v1.py
tests/unittests/memory/: test_in_memory_memory_service.py  test_vertex_ai_memory_bank_service.py
tests/unittests/models/: test_anthropic_llm.py  test_cache_metadata.py  test_google_llm.py  test_litellm.py  test_llm_request.py  test_llm_response.py
tests/unittests/plugins/: test_base_plugin.py  test_context_filtering_plugin.py  test_plugin_manager.py  test_save_files_as_artifacts.py
tests/unittests/runners/: test_pause_invocation.py  test_run_tool_confirmation.py
tests/unittests/sessions/: test_session_service.py  test_vertex_ai_session_service.py
tests/unittests/streaming/: test_live_streaming_configs.py  test_streaming.py  test_streaming_audio_storage.py
tests/unittests/telemetry/: test_functional.py  test_google_cloud.py  test_setup.py  test_spans.py
(+252 files in other folders)
